index.html recipes/Roleks.html recipes/mahamri.html styles/style.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
    
 <head>
     <meta charset="UTF-8">
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <title>Odine Recipe</title>
 </head>
 
 <body>
-    <h1>Odin Recipe <br> </h1>
+    <h1 id="head">Odin Recipe <br> 
+    
+    </h1>
 
-    <p> Recipes </p>
+    <p style="color: rgb(63, 63, 232); font-size: 18px; "> Recipes </p>
     <strong><em><ul>
         <li><a href="./recipes/mahamri.html">How to prepare Mahamri</a></li>
         <li><a href="./recipes/Roleks.html">How to prepare Roleks</a></li>
