--- a/recipes/Roleks.html
+++ b/recipes/Roleks.html
@@ -4,16 +4,17 @@
    
 <head>
     <meta charset="UTF-8">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title> Roleks Recipe </title>
 </head>
 
 <body>
-    <h1> How to make Roleks <br> <img src="../images/rol1.jpg"> </h1>
-    <h2>Description</h2>
+    <h1 id="head"> How to make Roleks <br> <img src="../images/rol1.jpg"> </h1>
+    <h2 class="heading">Description</h2>
         <p> Roleks is an East African street dish popularly invented 
             by Ugandans. It is a delicious meal, just like a cheese sandwich
             or a hotdog, it is one very easy snack to make. </p>
-    <h3> Ingredients </h3>
+    <h3 class="heading"> Ingredients </h3>
         <p> These are the Ingredients needed to make a Roleks </p>
         <ul>
             <li>2 eggs</li>
@@ -25,7 +26,7 @@
             <li>2 table spoons of cooking oil</li>
         </ul>
 
-    <h3> Preparation steps </h3>
+    <h3 class="heading"> Preparation steps </h3>
         <p> These are the steps on how to prepare Roleks </p>
         <ol>
             <li> Beat the 2 eggs well and add salt </li>
