--- a/recipes/mahamri.html
+++ b/recipes/mahamri.html
@@ -4,16 +4,17 @@
    
 <head>
     <meta charset="UTF-8">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title> Mahamri Recipe </title>
 </head>
 
 <body>
-    <h1> How to make Mahamri <br> <img src="../images/rol2.jpg"> </h1>
-    <h2>Description</h2>
+    <h1 id="head"> How to make Mahamri <br> <img src="../images/rol2.jpg"> </h1>
+    <h2 class="heading">Description</h2>
         <p> Mahamri is a meal originating from the East Coast of Africa, Mombasa
             and Dar es Salaam. This meal popularized due to its sweetness and soft 
         nature. Mahamri is mostly eaten as a breakfast meal </p>
-    <h3> Ingredients </h3>
+    <h3 class="heading"> Ingredients </h3>
         <p> These are the Ingredients needed to make Mahamri </p>
         <ul>
             <li>3 cups of flour</li>
@@ -28,7 +29,7 @@
             <li>Cooking oil</li>
         </ul>
 
-    <h3> Preparation steps </h3>
+    <h3 class="heading"> Preparation steps </h3>
         <p> These are the steps on how to prepare Mahamri </p>
         <ol>
             <li> Mix flour and margarine till its crumblike </li>
